<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddNoteActivity">



    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:inputType="textAutoComplete"
        android:hint="Please enter a title of note"/>

    <TextView
        android:id="@+id/tv_textWatcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Date and number of characters"
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:textColor="#D4AF37"/>

    <EditText
        android:id="@+id/etNote"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:inputType="textMultiLine"
        android:gravity="start"
        android:hint="Please enter a note"/>

</LinearLayout>